Fri Nov 26 17:54:32 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* bin/tao_other_tests.lst:

	  Added orbsvcs/test/Log/Basic_Log_Test test to the list.

Fri Nov 26 18:24:39 2004  Steve Huston  <shuston@riverace.com>

	* ace/OS_NS_Thread.inl (thr_getprio): WinCE doesn't support
	  GetPriorityClass, so this method will do ENOTSUP on WinCE.

	Also fixed the Friday ChangeLog entries that said it was Nov 25.

Fri Nov 26 17:46:29 2004  Steve Huston  <shuston@riverace.com>

	* examples/System_V_IPC/SV_Message_Queues/TMQ_Client.cpp: Corrected
	  wide-char issues.

	* examples/Threads/task_three.cpp: ACE_OSTREAM_TYPE is not always a
	  class that offers close(). So just delete the object when it's
	  not needed any longer. Also, remove the reference from ACE_Log_Msg.

Fri Nov 26 19:12:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * examples/Threads/task_three.cpp:
	  Fixed another compile problem.

Fri Nov 26 16:16:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * examples/System_V_IPC/SV_Message_Queues/TMQ_Client.cpp:
	  Fixed compile problems.

Fri Nov 26 12:00:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

	* ace/config-vxworks5.x.h:
	  Added ACE_HAS_STANDARD_CPP_LIBRARY for DIAB builds.

Fri Nov 26 11:04:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * examples/Threads/task_three.cpp:
        * examples/System_V_IPC/SV_Message_Queues/TMQ_Client.cpp:
	* examples/Logger/Acceptor-server/server_loggerd.cpp:
        * examples/Log_Msg/test_log_msg.cpp:
	  Fixed problems with iostreams for ACE_LACKS_IOSTREAM_TOTALLY builds
          (VxWorks DIAB).

Fri Nov 26 10:26:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Don't run bug_1535_regression when minimum_corba is enabled.

Fri Nov 26 10:17:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Removed some old info about os-patches, these are gone already for